bk_ida/gccida/c2/squeeze_notes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1007:4: error: expected ';' after expression
rtx v5; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1007:5: error: use of undeclared identifier 'v5'
rtx v5; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1008:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1008:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1017:1: error: use of undeclared identifier 'v5'
v5 = *startp; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1020:1: error: use of undeclared identifier 'v6'
v6 = v5; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1020:6: error: use of undeclared identifier 'v5'
v6 = v5; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1021:1: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1021:6: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1022:17: error: use of undeclared identifier 'v6'
if ( *( _WORD *)v6 == 37 && ( unsigned int)( v6[2].fld[0].rtint + 98) <= 5 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1022:46: error: use of undeclared identifier 'v6'
if ( *( _WORD *)v6 == 37 && ( unsigned int)( v6[2].fld[0].rtint + 98) <= 5 ) 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1024:6: error: use of undeclared identifier 'v6'
if ( v6 == v2 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1026:6: error: use of undeclared identifier 'v5'
v2 = v5; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1030:16: error: use of undeclared identifier 'v6'
v7 = ( __int64)v6[1]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1031:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)v2[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1032:14: error: use of undeclared identifier 'v6'
*( _QWORD *)&v6[1] = v8; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1033:1: error: use of undeclared identifier 'v6'
v6[1].fld[0].rtwint = ( __int64)v2; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1034:26: error: use of undeclared identifier 'v6'
*( _QWORD *)( v8 + 24) = v6; 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/jump.c:1035:15: error: use of undeclared identifier 'v6'
*( _QWORD *)( v6[1].fld[0].rtwint + 16) = v6; 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/squeeze_notes/src/obj/jump.o] Error 1
